--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(255, 24, 205);
+    background: rgba(255, 24, 205, 0.427);
     color: rgb(255, 0, 187);
     padding: 10px;
     font-family: Arial, sans-serif;
