--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /* navigation menu */
 nav {
-    background: rgb(255, 0, 217);
+    background: deeppink;
     margin: 0 auto;
     display: flex;
     padding: 10px;
@@ -71,6 +71,8 @@ main {
     border: 4px silver ridge;
     padding: 8px;
     margin-top: 20px;
+    background-color:deeppink;
+    color: white;
 }
 
 h2, h3 {
