--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ a {
 
 /* main container area beneath menu */
 main {
-    background: rgb(245, 238, 219);
+    background: rgb(255, 214, 254);
     display: flex;
     margin-top: 20px;
 }
@@ -68,13 +68,89 @@ main {
 
 /* interests section styles */
 #interests {
-    border: 4px silver ridge;
+    border: 4px rgba(245, 239, 239, 0.931) ridge;
     padding: 8px;
     margin-top: 20px;
     background-color:deeppink;
-    color: white;
+    color: rgb(207, 29, 85);
 }
 
 h2, h3 {
     margin: 0px;
 }
+
+/* Portfolio styles */
+.content h1 {
+    color: rgba(246, 236, 236, 0.275);
+  }
+  
+  #portfolio {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  
+  #portfolio li {
+    background: #ff13e4;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+  
+  #portfolio li:hover {
+    background: #ff6b6bb5;
+  }
+  
+  #portfolio a {
+    text-decoration: none;
+    color: #fffffff4;
+  }
+
+  /* responsive web design */
+@media screen and (min-width: 120px) and (max-width: 1080px) {
+    main {
+      height: 100ch;
+      zoom: 1.5;
+      display: grid;
+    }
+  
+    h1 {
+      font-size: 44px;
+    }
+  
+    h2 {
+      font-size: 42px;
+    }
+  
+    h3 {
+      font-size: 36px;
+    }
+  
+    #all-contents {
+      height: 100ch;
+      margin: none;
+    }
+  
+    a {
+      font-size: 42px;
+    }
+  
+    .sidebar {
+      margin-right: 0px;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .sidebar-img {
+      width: 100%;
+    }
+  
+    p,
+    li {
+      font-size: 24px;
+    }
+  
+    .content {
+      align-content: center;
+      justify-content: center;
+    }
+  }
