--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ a {
 
 /* main container area beneath menu */
 main {
-    background: rgb(255, 214, 254);
+    background: a x                                           ;;;;;rgb(255, 214, 254);
     display: flex;
     margin-top: 20px;
 }
